# odcs2lhp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/odcs2lhp/: __init__.py  __main__.py  cli.py  discovery.py  errors.py  mapper.py  parser.py  template_renderer.py  translator.py  writer.py
src/odcs2lhp/parsers/: __init__.py  odcs_parser.py  spark_type_parser.py
src/odcs2lhp/templates/: type_convert.py.j2
tests/: conftest.py  test_cli.py  test_discovery.py  test_e2e.py  test_parser.py  test_translator.py  test_type_mapping.py  test_writer.py
tests/fixtures/: lhp.yaml  sales.contract.yaml
tests/integration/: test_translate_integration.py
tests/integration/expected/inventory.odcs/load/schemas/: products_schema.yaml  warehouses_schema.yaml
tests/integration/expected/inventory.odcs/transform/expectations/: products_expectations.yaml  stock_levels_expectations.yaml  warehouses_expectations.yaml
tests/integration/expected/inventory.odcs/transform/python/: products_convert.py  stock_levels_convert.py  warehouses_convert.py
tests/integration/test_project/: lhp.yaml
tests/integration/test_project/contracts/: inventory.odcs.yaml  minimal.yml  sales.contract.yaml  type_matrix.yaml
tests/integration/test_project/contracts/marketing/: campaign.yaml
tests/unit/: test_cli.py  test_conversions.py  test_discovery.py  test_parser.py  test_spark_type_parser.py  test_template_renderer.py  test_translate_e2e.py  test_translator.py  test_type_mapping.py  test_writer.py
tests/unit/fixtures/: broken.contract.yaml  multi.odcs.yaml
(+65 files in other folders)
