[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odcs2lhp"
version = "0.1.0"
description = "Translate ODCS data contracts into Lakehouse Plumber metadata files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6",
    "jsonschema",
    "click>=8",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
odcs2lhp = "odcs2lhp.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
odcs2lhp = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
